force-app/main/default/objects/Account/fields/Account_Graduation_Status__c.field-meta.xml
<CustomField>
    <fullName>Account_Graduation_Status__c</fullName>
    <label>Account Graduation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Owner</fullName>
            </value>
            <value>
                <fullName>Graduated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>