force-app/main/default/objects/Account/fields/Account_Status__c.field-meta.xml
<CustomField>
    <fullName>Account_Status__c</fullName>
    <label>Account Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Key account – HOS</fullName>
                <label>Strategic - HOS</label>
            </value>
            <value>
                <fullName>Withdrawn</fullName>
            </value>
            <value>
                <fullName>Core Hoseasons</fullName>
                <label>Core - HOS</label>
            </value>
            <value>
                <fullName>Specialist Hoseasons</fullName>
                <label>Specialist - HOS</label>
            </value>
            <value>
                <fullName>Agency - HOS</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Agency - CDC</fullName>
                <isActive>false</isActive>
                <label>Agency - CDC</label>
            </value>
            <value>
                <fullName>Amberley and Portscatho</fullName>
                <isActive>false</isActive>
                <label>Amberley and Portscatho</label>
            </value>
            <value>
                <fullName>Attempted Welcome Call</fullName>
                <isActive>false</isActive>
                <label>Attempted Welcome Call</label>
            </value>
            <value>
                <fullName>Commercial Risk</fullName>
                <isActive>false</isActive>
                <label>Commercial Risk</label>
            </value>
            <value>
                <fullName>Declined</fullName>
                <isActive>false</isActive>
                <label>Declined</label>
            </value>
            <value>
                <fullName>Graduated</fullName>
                <isActive>false</isActive>
                <label>Graduated</label>
            </value>
            <value>
                <fullName>Integration Supplier</fullName>
                <isActive>false</isActive>
                <label>Integration Supplier</label>
            </value>
            <value>
                <fullName>Key account – CDC</fullName>
                <isActive>false</isActive>
                <label>Key account managed – CDC</label>
            </value>
            <value>
                <fullName>L&amp;P - Disqualified</fullName>
                <isActive>false</isActive>
                <label>L&amp;P - Disqualified</label>
            </value>
            <value>
                <fullName>L&amp;P - New Owner</fullName>
                <isActive>false</isActive>
                <label>L&amp;P - New Owner</label>
            </value>
            <value>
                <fullName>L&amp;P - Recruitment Stage</fullName>
                <isActive>false</isActive>
                <label>L&amp;P - Recruitment Stage</label>
            </value>
            <value>
                <fullName>Landal</fullName>
                <isActive>false</isActive>
                <label>Landal</label>
            </value>
            <value>
                <fullName>New Owner</fullName>
                <isActive>false</isActive>
                <label>New Owner</label>
            </value>
            <value>
                <fullName>New Owner at Risk</fullName>
                <isActive>false</isActive>
                <label>New Owner at Risk</label>
            </value>
            <value>
                <fullName>New owner at risk with NOT</fullName>
                <isActive>false</isActive>
                <label>New owner at risk with NOT</label>
            </value>
            <value>
                <fullName>Owner Risk</fullName>
                <isActive>false</isActive>
                <label>Owner Risk</label>
            </value>
            <value>
                <fullName>Portscatho</fullName>
                <isActive>false</isActive>
                <label>Portscatho</label>
            </value>
            <value>
                <fullName>Quality Cottages</fullName>
                <isActive>false</isActive>
                <label>Quality Cottages</label>
            </value>
            <value>
                <fullName>Quality Unearthed</fullName>
                <isActive>false</isActive>
                <label>Quality Unearthed</label>
            </value>
            <value>
                <fullName>With retention</fullName>
                <isActive>false</isActive>
                <label>With retention</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>