force-app/main/default/objects/Account/fields/Bank_Transfer__c.field-meta.xml
<CustomField>
    <fullName>Bank_Transfer__c</fullName>
    <label>Bank Transfer</label>
    <length>100</length>
    <type>Text</type>
</CustomField>