force-app/main/default/objects/Account/fields/Is_Seller__c.field-meta.xml
<CustomField>
    <fullName>Is_Seller__c</fullName>
    <formula>INCLUDES(Category__c, &quot;Seller&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Seller</label>
    <type>Checkbox</type>
</CustomField>