force-app/main/default/objects/Account/fields/Kunj_Test__c.field-meta.xml
<CustomField>
    <fullName>Kunj_Test__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is a git testing field</description>
    <label>Kunj Test</label>
    <type>Checkbox</type>
</CustomField>