force-app/main/default/objects/Account/fields/Sparsh_Test__c.field-meta.xml
<CustomField>
    <fullName>Sparsh_Test__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sparsh Test</label>
    <type>Checkbox</type>
</CustomField>