force-app/main/default/objects/Account/fields/Yashi_Test__c.field-meta.xml
<CustomField>
    <fullName>Yashi_Test__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Yashi Test</label>
    <type>Checkbox</type>
</CustomField>